// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / BarScale Bar Scale With Long Text 1`] = `
.c0 {
  margin-top: 4px;
  background-color: transparent;
}

.c3 {
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -2px;
  margin-right: -2px;
}

.c1 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c4 {
  height: 16px;
  background: #385E9D;
}

.c5 {
  height: 16px;
  background: #EBEBE8;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c5"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c5"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c5"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c5"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c5"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c5"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / BarScale Bar Scale With Max 1`] = `
.c0 {
  margin-top: 4px;
  background-color: transparent;
}

.c3 {
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -2px;
  margin-right: -2px;
}

.c1 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c4 {
  height: 16px;
  background: #385E9D;
}

.c5 {
  height: 16px;
  background: #EBEBE8;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c5"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / BarScale Bar Scale With Value And Text 1`] = `
.c0 {
  margin-top: 4px;
  background-color: transparent;
}

.c3 {
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -2px;
  margin-right: -2px;
}

.c1 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c4 {
  height: 16px;
  background: #385E9D;
}

.c5 {
  height: 16px;
  background: #EBEBE8;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c5"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c5"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c5"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c5"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c5"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / BarScale Bar Scale With X Axis 1`] = `
.c0 {
  margin-top: 4px;
  background-color: transparent;
}

.c3 {
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -2px;
  margin-right: -2px;
}

.c1 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  box-sizing: border-box;
}

.c4 {
  height: 16px;
  background: #385E9D;
}

.c5 {
  height: 16px;
  background: #EBEBE8;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c5"
      />
    </div>
  </div>
  <div
    className="c6"
  >
    <div
      className="c7"
    >
      Low
    </div>
    <div
      className="c7"
    >
      Medium
    </div>
    <div
      className="c7"
    >
      High
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / BarScale Bar Scale Without Show Value 1`] = `
.c0 {
  margin-top: 4px;
  background-color: transparent;
}

.c3 {
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -2px;
  margin-right: -2px;
}

.c1 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c4 {
  height: 16px;
  background: #385E9D;
}

.c5 {
  height: 16px;
  background: #EBEBE8;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c4"
      />
    </div>
    <div
      className="c2"
    >
      <div
        className="c3 c5"
      />
    </div>
  </div>
</div>
`;
